--- a/style.css
+++ b/style.css
@@ -8,9 +8,10 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh;
+  min-height: 100vh;
   font-family: "Montserrat", sans-serif;
   background-color: #f0f2f5;
+  padding: 20px 0;
 }
 
 .wrapper {
