--- a/style.css
+++ b/style.css
@@ -7,11 +7,11 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   min-height: 100vh;
   font-family: "Montserrat", sans-serif;
   background-color: #f0f2f5;
-  padding: 20px 0;
+  padding: 40px 0;
 }
 
 .wrapper {
